--- a/PizzaPlaneta/Properties/launchSettings.json
+++ b/PizzaPlaneta/Properties/launchSettings.json
@@ -10,7 +10,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+	  "launchBrowser": true,
+	  "launchUrl": "CrearPizza",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
